can send comments in comment section and fixed dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,17 @@
 @tailwind utilities;
 
 body {
-  @apply bg-white dark:bg-black;
+  @apply bg-white dark:bg-black duration-300;
 }
 
 .hoverAnimation {
   @apply dark:hover:bg-white hover:bg-black duration-100 ease-in-out hover:bg-opacity-10 dark:hover:bg-opacity-10 xl:p-3 rounded-full hover:cursor-pointer
     w-11 h-11 xl:w-auto xl:h-auto;
+}
+
+.imageHoverAnimation {
+  @apply dark:hover:bg-white hover:bg-black duration-100 ease-in-out hover:bg-opacity-10 dark:hover:bg-opacity-10 xl:p-3 rounded-full hover:cursor-pointer
+      w-12 h-12 xl:w-auto xl:h-auto;
 }
 
 .iconAnimation {
@@ -28,4 +33,12 @@ body {
     opacity: 0;
     z-index: -50;
   }
+}
+
+.comment-text {
+  display: block;
+  max-width: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
